kubernetes/indexer-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: furya-indexer
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  revisionHistoryLimit: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: furya-indexer
  template:
    metadata:
      labels:
        app: furya-indexer
    spec:
      containers:
        - name: furya-indexer
          image: YOUR_REGISTRY/furya/furya-indexer:BACKEND_COMMIT
          securityContext:
            allowPrivilegeEscalation: false
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - mountPath: /data
              name: teritor-indexer-storage
      dnsConfig:
        options:
          - name: ndots
            value: "3"
      securityContext:
        runAsUser: 1000
        runAsGroup: 3000
        fsGroup: 2000
      volumes:
        - name: teritor-indexer-storage
          persistentVolumeClaim:
            claimName: furya-indexer-pvc
