kubernetes/backend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: furya-dapp-2-backend
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  revisionHistoryLimit: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: furya-dapp-2-backend
  template:
    metadata:
      labels:
        app: furya-dapp-2-backend
    spec:
      containers:
      - name: furya-dapp-2-backend
        image: YOUR_REGISTRY/furya/furya-dapp-2-backend:BACKEND_COMMIT
        securityContext:
          allowPrivilegeEscalation: false
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9090
        volumeMounts:
          - mountPath: /data
            name: teritor-indexer-storage
      dnsConfig:
        options:
        - name: ndots
          value: "3"
      securityContext:
        runAsUser: 1000
        runAsGroup: 3000
        fsGroup: 2000
      volumes:
      - name: teritor-indexer-storage
        persistentVolumeClaim:
          claimName: furya-indexer-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: furya-dapp-2-backend
  annotations:
spec:
  selector:
    app: furya-dapp-2-backend
  ports:
  - name: http
    port: 80
    targetPort: 9090
  - name: https
    port: 443
    targetPort: 9090
